feat: add vote handling service, improve validation, and optimize queries